<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C537B"
    tools:context=".GameOver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B07D8B"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="279dp"
            android:layout_height="78dp"
            android:fontFamily="@font/fontmeio"
            android:text="@string/tentar_de_novo"
            android:textAlignment="viewEnd"
            android:textColor="#F44336"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yesButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#5C3468"
                android:fontFamily="@font/fontmeio"
                android:text="@string/sim"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#F44336" />

            <Button
                android:id="@+id/noButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#5C3468"
                android:fontFamily="@font/fontmeio"
                android:text="@string/n_o"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#F44336" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="401dp"
            android:layout_height="104dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fontmeio"
                android:text="@string/pontua_o"
                android:textAlignment="viewEnd"
                android:textColor="#F44336"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/scoreView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fontmeio"
                android:textAlignment="viewStart"
                android:textColor="#F44336"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fontmeio"
                android:text="@string/recorde"
                android:textAlignment="textEnd"
                android:textColor="#F44336"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/numRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fontmeio"
                android:textColor="#F44336"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>